--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,2 +1,18 @@
 body {
   font-family: 'Poppins', sans-serif; }
+
+* {
+  margin: 0;
+  padding: 0; }
+
+.banner-container {
+  width: auto;
+  height: auto; }
+
+.banner__img {
+  width: 100%;
+  height: 35%; }
+
+.menu__btn {
+  width: 40px;
+  height: 30px; }
